# pup517

./: README.md  localbuild.py  pyproject.toml
pups/go-jsonnet/: pyproject.toml
pups/make/: pyproject.toml
src/pup517/: fetch.py  pkg.py
src/pup517/build_system/: simple_cc.py
