[build-system]
requires = ["pup517"]
build-backend = "pup517.backend"

[project]
name = "pup-make"
version = "4.4.1"

[[pup517.srcuris]]
type = "http_archive"
url = "https://mirrors.ocf.berkeley.edu/gnu/make/make-4.4.1.tar.lz"
sha256 = "8814ba072182b605d156d7589c19a43b89fc58ea479b9355146160946f8cf6e9"
strip_components = 1

[pup517.hooks]
configure = [ "default", "./configure --without-guile --with-guile=no" ]
compile = [ "default", "./build.sh" ]
install = [ "default", 'cp make "${PUP_BINDIR}/"' ]
